[tool.poetry]
name = "to-do-timer"
version = "0.1.0"
description = ""
authors = ["rustem <hyshikryst@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
setuptools = "^69.5.1"
pydantic-settings = "^2.3.3"
SQLAlchemy = "^2.0.31"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
redis = "^5.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
asyncpg = "^0.29.0"
greenlet = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
